Suppression de la route d'ajout (store) d'un user, car doublon avec la fonction register
